[gd_scene load_steps=6 format=3 uid="uid://da5sqmgi57nug"]

[ext_resource type="Script" path="res://src/editor/Campaign Editor.gd" id="1_0i7e4"]
[ext_resource type="Texture2D" uid="uid://d6lrn2l371jb" path="res://data/Data_Regions.png" id="2_2u2yy"]
[ext_resource type="Script" path="res://src/editor/editor_camera.gd" id="3_2o3qc"]
[ext_resource type="Script" path="res://src/editor/MB_diagnostics.gd" id="4_nok5w"]
[ext_resource type="Script" path="res://src/editor/MB_properties.gd" id="5_1mbiw"]

[node name="Campaign Editor" type="Node2D"]
script = ExtResource("1_0i7e4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_2u2yy")
centered = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1844, 634)
script = ExtResource("3_2o3qc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel_region" type="Panel" parent="CanvasLayer"]
visible = false
offset_left = 881.0
offset_top = 33.0
offset_right = 1153.0
offset_bottom = 339.0

[node name="VB" type="VBoxContainer" parent="CanvasLayer/Panel_region"]
layout_mode = 0
offset_right = 269.0
offset_bottom = 343.0

[node name="GC" type="GridContainer" parent="CanvasLayer/Panel_region/VB"]
layout_mode = 2

[node name="Label_Colorcode_header" type="Label" parent="CanvasLayer/Panel_region/VB/GC"]
layout_mode = 2
size_flags_horizontal = 3
text = "Color Code"

[node name="Label_Colorcode" type="Label" parent="CanvasLayer/Panel_region/VB/GC"]
layout_mode = 2

[node name="Label_Name" type="Label" parent="CanvasLayer/Panel_region/VB/GC"]
layout_mode = 2
text = "Region Name"

[node name="LE_Name" type="LineEdit" parent="CanvasLayer/Panel_region/VB/GC"]
layout_mode = 2

[node name="Label_Continent" type="Label" parent="CanvasLayer/Panel_region/VB/GC"]
layout_mode = 2
text = "Continent"

[node name="OB_Continent" type="OptionButton" parent="CanvasLayer/Panel_region/VB/GC"]
layout_mode = 2

[node name="Label_Owner" type="Label" parent="CanvasLayer/Panel_region/VB/GC"]
layout_mode = 2
text = "Owner"

[node name="OB_Owner" type="OptionButton" parent="CanvasLayer/Panel_region/VB/GC"]
layout_mode = 2

[node name="HB" type="HBoxContainer" parent="CanvasLayer/Panel_region/VB"]
layout_mode = 2

[node name="Button_region_save" type="Button" parent="CanvasLayer/Panel_region/VB/HB"]
layout_mode = 2
text = "Save"

[node name="Button_region_close" type="Button" parent="CanvasLayer/Panel_region/VB/HB"]
layout_mode = 2
text = "Close"

[node name="Panel_continents" type="Panel" parent="CanvasLayer"]
visible = false
offset_top = 31.0
offset_right = 346.0
offset_bottom = 648.0

[node name="VB" type="VBoxContainer" parent="CanvasLayer/Panel_continents"]
layout_mode = 0
offset_right = 346.0
offset_bottom = 135.0

[node name="Label_continents" type="Label" parent="CanvasLayer/Panel_continents/VB"]
layout_mode = 2
text = "Continents"

[node name="Button_add_continent" type="Button" parent="CanvasLayer/Panel_continents/VB"]
layout_mode = 2
text = "Add New"

[node name="VB_continents" type="VBoxContainer" parent="CanvasLayer/Panel_continents/VB"]
layout_mode = 2

[node name="Button_save_continent" type="Button" parent="CanvasLayer/Panel_continents/VB"]
layout_mode = 2
text = "Save"

[node name="Button_close_continent" type="Button" parent="CanvasLayer/Panel_continents/VB"]
layout_mode = 2
text = "Close"

[node name="Panel_players" type="Panel" parent="CanvasLayer"]
visible = false
offset_top = 30.0
offset_right = 345.0
offset_bottom = 643.0

[node name="VB" type="VBoxContainer" parent="CanvasLayer/Panel_players"]
layout_mode = 0
offset_right = 157.0
offset_bottom = 100.0

[node name="Label_players" type="Label" parent="CanvasLayer/Panel_players/VB"]
layout_mode = 2
text = "Players"

[node name="Button_add_player" type="Button" parent="CanvasLayer/Panel_players/VB"]
layout_mode = 2
text = "Add New"

[node name="VB_players" type="VBoxContainer" parent="CanvasLayer/Panel_players/VB"]
layout_mode = 2

[node name="Button_save_player" type="Button" parent="CanvasLayer/Panel_players/VB"]
layout_mode = 2
text = "Save"

[node name="Button_close_players" type="Button" parent="CanvasLayer/Panel_players/VB"]
layout_mode = 2
text = "Close"

[node name="Panel_toolbar" type="Panel" parent="CanvasLayer"]
offset_right = 1150.0
offset_bottom = 30.0

[node name="MB_diagnostics" type="MenuButton" parent="CanvasLayer/Panel_toolbar"]
layout_mode = 0
offset_left = 415.0
offset_top = 1.0
offset_right = 555.0
offset_bottom = 32.0
text = "Diagnostics"
script = ExtResource("4_nok5w")

[node name="MB_properties" type="MenuButton" parent="CanvasLayer/Panel_toolbar"]
layout_mode = 0
offset_left = 259.0
offset_top = 2.0
offset_right = 422.0
offset_bottom = 33.0
text = "Properties"
script = ExtResource("5_1mbiw")

[node name="Panel_validation" type="Panel" parent="CanvasLayer"]
visible = false
offset_right = 1156.0
offset_bottom = 651.0

[node name="Panel_val_summary" type="Panel" parent="CanvasLayer/Panel_validation"]
layout_mode = 0
offset_left = 331.0
offset_top = 166.0
offset_right = 835.0
offset_bottom = 285.0

[node name="VB" type="VBoxContainer" parent="CanvasLayer/Panel_validation/Panel_val_summary"]
layout_mode = 0
offset_right = 501.0
offset_bottom = 118.0

[node name="HB_header" type="HBoxContainer" parent="CanvasLayer/Panel_validation/Panel_val_summary/VB"]
layout_mode = 2

[node name="Label_header_summary" type="Label" parent="CanvasLayer/Panel_validation/Panel_val_summary/VB/HB_header"]
layout_mode = 2
text = "Summary"

[node name="Button_close_validation" type="Button" parent="CanvasLayer/Panel_validation/Panel_val_summary/VB/HB_header"]
layout_mode = 2
text = "Close"

[node name="HB" type="HBoxContainer" parent="CanvasLayer/Panel_validation/Panel_val_summary/VB"]
layout_mode = 2

[node name="Label_sum_regions" type="Label" parent="CanvasLayer/Panel_validation/Panel_val_summary/VB/HB"]
layout_mode = 2
text = "Total Regions: "

[node name="Label_sum_regions_input" type="Label" parent="CanvasLayer/Panel_validation/Panel_val_summary/VB/HB"]
layout_mode = 2

[node name="HB2" type="HBoxContainer" parent="CanvasLayer/Panel_validation/Panel_val_summary/VB"]
layout_mode = 2

[node name="Label_sum_warnings" type="Label" parent="CanvasLayer/Panel_validation/Panel_val_summary/VB/HB2"]
layout_mode = 2
text = "Total warnings: "

[node name="Label_sum_warnings_input" type="Label" parent="CanvasLayer/Panel_validation/Panel_val_summary/VB/HB2"]
layout_mode = 2

[node name="Button_validation_details" type="Button" parent="CanvasLayer/Panel_validation/Panel_val_summary/VB"]
layout_mode = 2
text = "Details"

[node name="Panel_val_details" type="Panel" parent="CanvasLayer/Panel_validation"]
visible = false
layout_mode = 0
offset_left = 331.0
offset_top = 289.0
offset_right = 834.0
offset_bottom = 369.0

[node name="SC" type="ScrollContainer" parent="CanvasLayer/Panel_validation/Panel_val_details"]
layout_mode = 0
offset_right = 500.0
offset_bottom = 77.0

[node name="VB" type="VBoxContainer" parent="CanvasLayer/Panel_validation/Panel_val_details/SC"]
layout_mode = 2

[connection signal="text_changed" from="CanvasLayer/Panel_region/VB/GC/LE_Name" to="." method="_on_le_name_text_changed"]
[connection signal="item_selected" from="CanvasLayer/Panel_region/VB/GC/OB_Continent" to="." method="_on_ob_continent_item_selected"]
[connection signal="item_selected" from="CanvasLayer/Panel_region/VB/GC/OB_Owner" to="." method="_on_ob_owner_item_selected"]
[connection signal="button_up" from="CanvasLayer/Panel_region/VB/HB/Button_region_save" to="." method="_on_button_region_save_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel_region/VB/HB/Button_region_close" to="." method="_on_button_region_close_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel_continents/VB/Button_add_continent" to="." method="_on_button_add_continent_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel_continents/VB/Button_save_continent" to="." method="_on_button_save_continent_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel_continents/VB/Button_close_continent" to="." method="_on_button_close_continent_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel_players/VB/Button_add_player" to="." method="_on_button_add_player_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel_players/VB/Button_save_player" to="." method="_on_button_save_player_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel_players/VB/Button_close_players" to="." method="_on_button_close_players_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel_validation/Panel_val_summary/VB/HB_header/Button_close_validation" to="CanvasLayer/Panel_toolbar/MB_diagnostics" method="_on_button_close_validation_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel_validation/Panel_val_summary/VB/Button_validation_details" to="CanvasLayer/Panel_toolbar/MB_diagnostics" method="_on_button_validation_details_button_up"]
